# mvo-prompt-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
inputs/batch/: mvo_105_weights_saa_v3.csv
inputs/fixtures/: v3_market_pack.json  v3_rules_pack.json
prompts/: allocation_test.v001.md  allocation_test.v002.md  registry.yaml
runs/2026-02-01/: run_001.jsonl  run_002.jsonl  run_003.jsonl
runs/2026-02-01/run_001_artifacts/: raw_response.txt  system_prompt.txt  user_payload.json  validation.json
runs/2026-02-01/run_002_artifacts/: raw_response.txt  validation.json
runs/2026-02-01/run_003_artifacts/: raw_response.txt  system_prompt.txt  user_payload.json  validation.json
runs/2026-02-02/: run_001.jsonl  run_002.jsonl  run_003.jsonl  run_004.jsonl  run_005.jsonl  run_006.jsonl  run_007.jsonl  run_008.jsonl  run_009.jsonl  run_010.jsonl  run_011.jsonl  run_012.jsonl
runs/2026-02-02/run_001_artifacts/: raw_response.txt  system_prompt.txt  user_payload.json  validation.json
runs/2026-02-02/run_002_artifacts/: raw_response.txt  system_prompt.txt  user_payload.json  validation.json
runs/batch_20260202_100710/: batch.jsonl  results.csv  summary.json
runs/batch_20260202_100835/: batch.jsonl  summary.json
runs/batch_20260202_102420/: batch.jsonl  results.csv  summary.json
runs/batch_20260202_102607/: batch.jsonl  results.csv  summary.json
runs/batch_20260202_171708/: batch.jsonl  results.csv
src/promptlab/: __init__.py  __main__.py  batch.py  cli.py  dashscope_client.py  logger.py  prompt_store.py  rules_engine.py  validator.py
(+40 files in other folders)
